--- a/08-js-layout.html
+++ b/08-js-layout.html
@@ -19,6 +19,7 @@
   </script>
 
   <script>
+    let ed = 0
     let row
     let cell
     let array_fname = []
@@ -50,7 +51,7 @@
     <div class="hero-body has-background-grey-light">
       <div class="container has-text-centered">
         <div class="columns is-centered mx-auto">
-          <div class="column is-half">
+          <div class="column ">
             <div class="card has-background-success-light	">
               <div class="card-content">
                 <div class="content">
@@ -100,30 +101,36 @@
         cell = row.insertCell()
         cell.innerHTML = array_email[i]
         cell = row.insertCell()
-        cell.innerHTML = '<button class="button is-warning" >Edit</button>'
+        cell.innerHTML = '<button class="button is-warning" onclick="edit_data(' + i + ')">Edit</button>'
         cell = row.insertCell()
-        cell.innerHTML = '<button class="button is-danger">Delete</button>'
+        cell.innerHTML = '<button class="button is-danger" onclick="delete_data(' + i + ')">Delete</button>'
       }
     }
 
     function insert_data() {
-      row = td1.insertRow()
-      cell = row.insertCell()
-      cell.innerHTML = '<input class="input" type="text" placeholder="input Full Name" id="fname">'
-      cell = row.insertCell()
-      cell.innerHTML = '<input class="input is-success" type="text" placeholder="input Phone Number" id="phone">'
-      cell = row.insertCell()
-      cell.innerHTML = '<input class="input is-danger" type="email" placeholder="Email input" id="email">'
-      cell = row.insertCell()
-      cell.innerHTML = '<button class="button has-background-primary" onclick="save_data()" >Save</button>'
-      cell = row.insertCell()
-      cell.innerHTML = '<button class="button is-link" onclick="cancel_insert()">Cancel</button>'
+      if (ed == 0) {
+        ed = 1
+        row = td1.insertRow()
+        cell = row.insertCell()
+        cell.innerHTML = '<input class="input" type="text" placeholder="input Full Name" id="fname">'
+        cell = row.insertCell()
+        cell.innerHTML = '<input class="input is-success" type="text" placeholder="input Phone Number" id="phone">'
+        cell = row.insertCell()
+        cell.innerHTML = '<input class="input is-danger" type="email" placeholder="Email input" id="email">'
+        cell = row.insertCell()
+        cell.innerHTML = '<button class="button has-background-primary" onclick="save_data()" >Save</button>'
+        cell = row.insertCell()
+        cell.innerHTML = '<button class="button is-link" onclick="cancel_insert()">Cancel</button>'
 
 
+
+      }
     }
 
     function cancel_insert() {
+
       row = td1.deleteRow(td1.rows.length - 1)
+      ed = 0
 
 
     }
@@ -147,6 +154,7 @@
         document.getElementById('email').value = ''
 
         td1.innerHTML = ''
+        ed = 0
 
         load_data()
 
@@ -155,6 +163,66 @@
       }
 
     }
+
+    function delete_data(i) {
+      if (confirm('Delete Data Y/n')) {
+        array_fname.splice(i, 1)
+        array_phone.splice(i, 1)
+        array_email.splice(i, 1)
+
+        localStorage.setItem('fname', JSON.stringify(array_fname))
+        localStorage.setItem('phone', JSON.stringify(array_phone))
+        localStorage.setItem('email', JSON.stringify(array_email))
+
+        td1.innerHTML = ''
+
+        load_data()
+
+      }
+    }
+    function edit_data(i) {
+      if (ed == 0) {
+        ed = 1
+        td1.rows[i].cells[0].innerHTML = '<input class="input" type="text" placeholder="input Full Name" id="fname" value="' + array_fname[i] + '">'
+
+        td1.rows[i].cells[1].innerHTML = '<input class="input" type="text" placeholder="input Phone Number" id="phone" value="' + array_phone[i] + '">'
+
+        td1.rows[i].cells[2].innerHTML = '<input class="input" type="email" placeholder="Email input" id="email" value="' + array_email[i] + '">'
+
+        td1.rows[i].cells[3].innerHTML = '<button class="button has-background-primary" onclick="save_edit(' + i + ')" >Save</button>'
+
+        td1.rows[i].cells[4].innerHTML = '<button class="button is-link" onclick="cancel_edit()">Cancel</button>'
+
+        console.log(td1.rows[0].cells[0])
+
+      }
+
+    }
+
+    function cancel_edit() {
+      td1.innerHTML = ''
+      load_data()
+      ed = 0
+
+    }
+
+    function save_edit(i) {
+      array_fname[i] = document.getElementById('fname').value
+      array_phone[i] = document.getElementById('phone').value
+      array_email[i] = document.getElementById('email').value
+
+      localStorage.setItem('fname', JSON.stringify(array_fname))
+      localStorage.setItem('phone', JSON.stringify(array_phone))
+      localStorage.setItem('email', JSON.stringify(array_email))
+
+      td1.innerHTML = ''
+
+      load_data()
+
+      ed = 0
+
+    }
+
 
 
   </script>
